# yuntu

./: build.gradle  local.properties  readme.md  settings.gradle
app/: build.gradle  platform.jks
app/src/androidTest/java/com/example/yuntunative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/android_wrapper/: android_wrapper.cpp  android_wrapper.h  cJSON.c
app/src/main/cpp/qcloud_iot_c_sdk/include/: config.h  lite-list.h  lite-utils.h  platform.h  qcloud_iot_export.h  qcloud_iot_export_variables.h  qcloud_iot_import.h  utils_getopt.h
app/src/main/cpp/qcloud_iot_c_sdk/include/exports/: qcloud_iot_export_broadcast.h  qcloud_iot_export_coap.h  qcloud_iot_export_dynreg.h  qcloud_iot_export_error.h  qcloud_iot_export_gateway.h  qcloud_iot_export_hasim.h  qcloud_iot_export_log.h  qcloud_iot_export_mqtt.h  qcloud_iot_export_ota.h  qcloud_iot_export_remote_config.h  qcloud_iot_export_rrpc.h  qcloud_iot_export_shadow.h  qcloud_iot_export_system.h
app/src/main/cpp/qcloud_iot_c_sdk/sdk_src/internal_inc/: at_client.h  at_socket_inf.h  at_uart_hal.h  at_utils.h  coap_client.h  coap_client_net.h  gateway_common.h  json_parser.h  log_upload.h  mqtt_client.h  mqtt_client_net.h  network_interface.h  ota_client.h  ota_fetch.h  ota_lib.h  qcloud_hasim.h  qcloud_iot_ca.h  qcloud_iot_common.h  qcloud_iot_device.h  shadow_client.h  shadow_client_common.h  shadow_client_json.h  utils_aes.h  utils_base64.h  utils_hmac.h  utils_httpc.h  utils_list.h  utils_md5.h  utils_param_check.h  utils_ringbuff.h  utils_sha1.h  utils_timer.h
app/src/main/java/com/example/yuntunative/: MainActivity.java  NetPingManager.java  PingNetEntity.java  PintNet.java  YunTuUtils.java  YuntuApplication.java  YuntuHal.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/yuntunative/: ExampleUnitTest.java
doc/: IoTLink 云兔安卓SDK HAL层开发指导draft.md
gradle/wrapper/: gradle-wrapper.properties
